Image on the card fixed with object-fit / number deported with negative margin in the hiw section / rest-card-prev__new font color modified with the darken function all for the welcomepage - for the menupage font fixed with the Google font online / order-now button separated from the Rest-menu div to be centered / banner image contain to fit all the different pages z-index to superpose the different elements

--- a/writing-sass/sass/pages/_menupage.scss
+++ b/writing-sass/sass/pages/_menupage.scss
@@ -1,5 +1,8 @@
 .rest-banner-image {
     z-index: 1;
+    object-fit: cover;
+    height: 300px;
+    width: 100%;
 }
 .rest-menu {
     background-color: $color-backlight;
@@ -18,9 +21,9 @@
         }
     }
     .rest-menu__heading {
-        font-family: Shirkhand;
+        font-family: Shrikhand;
         font-style: italic;
-        font-weight: 900;
+        font-weight: 500;
         font-size: 34px;
 }
     .rest-menu__type-heading {
@@ -52,4 +55,8 @@
             justify-content: space-between;
         }
     }
+}
+.order-now {
+    display: flex;
+    background-color: $color-backlight;
 }
