--- a/writing-sass/sass/pages/_welcomepage.scss
+++ b/writing-sass/sass/pages/_welcomepage.scss
@@ -21,6 +21,7 @@
     min-height: 33%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     position: relative;
+    cursor: pointer;
 
     .hiw-step__icon {
         color: $color-icon-inactive;
@@ -61,10 +62,10 @@
     flex-direction: column;
     align-items: flex-start;
     text-align: center;
-    margin-left: 10px;
+    margin-bottom: 30px;
 
     .rest-results__heading {
-        margin: 80px 0px 20px 10px;
+        margin: 80px 0px 20px 25px;
     }
 }
 
@@ -87,8 +88,8 @@
 
         .rest-card-prev__new {
             background-color: $color-tertiary;
-            color: $color-white;
-            width: 100px;
+            color: darken($color-tertiary,35%);
+            width: 80px;
             height: 25px;
             @include flex-center-center;
             position: absolute;
@@ -101,7 +102,7 @@
             border-radius: 15px 15px 0px 0px;
             height: 200px;
             width: 100%;
-            flex-grow: 0;
+            object-fit: cover;
             }
             .rest-card-prev__content {
                 display: flex;
